# libfvalue

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfvalue-wiki.ini  libfvalue.ini  libfvalue.pc.in  libfvalue.spec.in  synclibs.sh
.github/workflows/: build_linux.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfvalue.h.in
include/libfvalue/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfvalue/: Makefile.am  libfvalue.c  libfvalue.rc.in  libfvalue_binary_data.c  libfvalue_binary_data.h  libfvalue_codepage.h  libfvalue_data_handle.c  libfvalue_data_handle.h  libfvalue_definitions.h.in  libfvalue_error.c  libfvalue_error.h  libfvalue_extern.h  libfvalue_filetime.c  libfvalue_filetime.h  libfvalue_floating_point.c  libfvalue_floating_point.h  libfvalue_integer.c  libfvalue_integer.h  libfvalue_libcdata.h  libfvalue_libcerror.h  libfvalue_libcnotify.h  libfvalue_libcstring.h  libfvalue_libfdatetime.h  libfvalue_libfguid.h  libfvalue_libfwnt.h  libfvalue_libuna.h  libfvalue_split_string.c  libfvalue_split_string.h  libfvalue_split_utf16_string.c  libfvalue_split_utf16_string.h  libfvalue_split_utf8_string.c  libfvalue_split_utf8_string.h  libfvalue_string.c  libfvalue_string.h  libfvalue_support.c  libfvalue_support.h  libfvalue_table.c  libfvalue_table.h  libfvalue_types.h  libfvalue_unused.h  (+10 more)
manuals/: Makefile.am  libfvalue.3
msvscpp/: Makefile.am  libfvalue.sln
msvscpp/fvalue_test_binary_data/: fvalue_test_binary_data.vcproj
msvscpp/fvalue_test_data_handle/: fvalue_test_data_handle.vcproj
msvscpp/fvalue_test_error/: fvalue_test_error.vcproj
msvscpp/fvalue_test_filetime/: fvalue_test_filetime.vcproj
msvscpp/fvalue_test_floating_point/: fvalue_test_floating_point.vcproj
msvscpp/fvalue_test_get_version/: fvalue_test_get_version.vcproj
msvscpp/fvalue_test_integer/: fvalue_test_integer.vcproj
msvscpp/fvalue_test_split_utf16_string/: fvalue_test_split_utf16_string.vcproj
msvscpp/fvalue_test_split_utf8_string/: fvalue_test_split_utf8_string.vcproj
msvscpp/fvalue_test_string/: fvalue_test_string.vcproj
msvscpp/fvalue_test_support/: fvalue_test_support.vcproj
msvscpp/fvalue_test_table/: fvalue_test_table.vcproj
msvscpp/fvalue_test_utf16_string/: fvalue_test_utf16_string.vcproj
msvscpp/fvalue_test_utf8_string/: fvalue_test_utf8_string.vcproj
msvscpp/fvalue_test_value/: fvalue_test_value.vcproj
msvscpp/fvalue_test_value_entry/: fvalue_test_value_entry.vcproj
msvscpp/fvalue_test_value_type/: fvalue_test_value_type.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libuna/: libuna.vcproj
tests/: Makefile.am  fvalue_test_binary_data.c  fvalue_test_data_handle.c  fvalue_test_error.c  fvalue_test_filetime.c  fvalue_test_floating_point.c  fvalue_test_get_version.c  fvalue_test_integer.c  fvalue_test_libcerror.h  fvalue_test_libcstring.h  fvalue_test_libfdatetime.h  fvalue_test_libfguid.h  fvalue_test_libfvalue.h  fvalue_test_libfwnt.h  fvalue_test_macros.h  fvalue_test_memory.c  fvalue_test_memory.h  fvalue_test_split_utf16_string.c  fvalue_test_split_utf8_string.c  fvalue_test_string.c  fvalue_test_support.c  fvalue_test_table.c  fvalue_test_unused.h  fvalue_test_utf16_string.c  fvalue_test_utf8_string.c  fvalue_test_value.c  fvalue_test_value_entry.c  fvalue_test_value_type.c  pkgbuild.sh  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_value.sh
