MSVSCPP_FILES = \
	fvalue_test_error/fvalue_test_error.vcproj \
	fvalue_test_support/fvalue_test_support.vcproj \
	fvalue_test_value/fvalue_test_value.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfvalue.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

