MSVSCPP_FILES = \
	fvalue_test_binary_data/fvalue_test_binary_data.vcproj \
	fvalue_test_data_handle/fvalue_test_data_handle.vcproj \
	fvalue_test_error/fvalue_test_error.vcproj \
	fvalue_test_filetime/fvalue_test_filetime.vcproj \
	fvalue_test_floating_point/fvalue_test_floating_point.vcproj \
	fvalue_test_integer/fvalue_test_integer.vcproj \
	fvalue_test_split_utf16_string/fvalue_test_split_utf16_string.vcproj \
	fvalue_test_split_utf8_string/fvalue_test_split_utf8_string.vcproj \
	fvalue_test_string/fvalue_test_string.vcproj \
	fvalue_test_support/fvalue_test_support.vcproj \
	fvalue_test_table/fvalue_test_table.vcproj \
	fvalue_test_value/fvalue_test_value.vcproj \
	fvalue_test_value_entry/fvalue_test_value_entry.vcproj \
	fvalue_test_value_type/fvalue_test_value_type.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfvalue.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

